--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "ldap"
   ],
   "dependencies": {
-    "request":"2.69.X"
+    "request": "2.69.X"
+  },
+  "devDependencies": {
+    "chai": "3.5.x",
+    "jshint": "2.9.x",
+    "mocha": "2.4.x"
   },
   "repository": {
     "type": "git",
@@ -21,7 +26,7 @@
   "engines": "node >= 0.10.40",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "npm run lint && echo no test yet",
+    "test": "npm run lint && mocha test/main.js",
     "lint": "jshint lib/*.js"
   },
   "jshintConfig": {
