--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "jumpcloud",
   "description": "Interfaces with the JumpCloud REST API via Node",
   "author": "Jon Davis <jdavis@trueaccord.com>",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "tags": [
     "jumpcloud",
     "ldap"
   ],
   "dependencies": {
-    "request": "2.69.X"
+    "request": "2.69.x"
   },
   "devDependencies": {
     "chai": "3.5.x",
@@ -26,7 +26,7 @@
   "engines": "node >= 0.10.40",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "npm run lint && mocha test/main.js",
+    "test": "npm run lint && mocha --timeout 5000 --slow 1000 test/main.js",
     "lint": "jshint lib/*.js"
   },
   "jshintConfig": {
